--- a/maintenance/index.html
+++ b/maintenance/index.html
@@ -50,7 +50,7 @@
 </tr>
 <tr>
 <td style="padding-left: 20px;">
-The CHIPS system is currently unavailabe due to system maintenance.  Note that CHIPS is normally unavailable between 3am and 6am on Wednesdays.
+The CHIPS system is currently unavailable due to system maintenance.  Note that CHIPS is normally unavailable between 3am and 6am on Wednesdays.
 </td>
 </tr>
 <tr>
